--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,10 +11,10 @@
           routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <mat-icon>home</mat-icon>Home
         </li>
-        <li mat-button routerLink="/contacts"
+        <!-- <li mat-button routerLink="/contacts"
           class="top-menu-item flex justify-center items-center gap-2 cursor-pointer" routerLinkActive="active">
           <mat-icon>people</mat-icon>Contacts
-        </li>
+        </li> -->
       </ul>
 
     </div>
@@ -43,12 +43,12 @@
           </a>
         </div>
 
-        <div>
+        <!-- <div>
           <a (click)="sidenav.close()" mat-button routerLink="/contacts" class="side-menu-item"
             routerLinkActive="active">
             <mat-icon>people</mat-icon>Contacts
           </a>
-        </div>
+        </div> -->
         <div>
           <a (click)="sidenav.close()" *ngIf="!isUserLoggedIn" mat-button routerLink="/login" class="side-menu-item"
             routerLinkActive="active" (click)="logout()">
